[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error_system = { path = "../error_system" }
parser = { path = "../parser" }
context = { path = "../context" }

[[bin]]
path = "src/main.rs"
name = "loxc"
test = false
bench = false