[package]
name = "rlox_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlox_errors = { path = "../rlox_errors" }
rlox_parser = { path = "../rlox_parser" }
rlox_source = { path = "../rlox_source" }

[[bin]]
path = "src/main.rs"
name = "loxc"
test = false
bench = false