[package]
name = "rlox_graphviz"
version = "0.1.0"
edition = "2021"

[dependencies]
rlox_errors = { path = "../rlox_errors" }
rlox_parser = { path = "../rlox_parser" }
rlox_source = { path = "../rlox_source" }
rlox_ast = { path = "../rlox_ast" }
rlox_cf_graph = { path = "../rlox_cf_graph" }
rlox_infra = { path = "../rlox_infra" }
